# temperature-awareness

./: README.md  analyze_results.py  check_progress.sh  main.py  prompts.py  pyproject.toml  run_experiment.py
.claude/: settings.json
.claude/hive-mind/: .gitignore  transcripts-dir
data/: Top 1500 Nouns used in English Vocabulary Words for Speaking.html
results/: experiment_results.json
results_classification/: classification_results.json
results_logprob/: experiment_results.json
results_logprob_50/: experiment_results.json
results_prefixed/: experiment_results.json
src/: alpaca_questions.py  analyze_results.py  autograder.py  extract_nouns.py  plot_by_model.py  plot_choice.py  plot_choice_binary.py  plot_classification.py  plot_errors.py  plot_logprob_50_histogram.py  plot_logprob_histogram.py  plot_strategy.py  prompts.py  run_choice_binary_experiment.py  run_choice_experiment.py  run_experiment.py  run_logprob_50_experiment.py  run_logprob_experiment.py  run_strategy_experiment.py  run_transcript_classification.py
src/results_choice/: experiment_results.json
src/results_choice_binary/: experiment_results.json
